--- a/WebContent/mz/search/filterIntra.xhtml
+++ b/WebContent/mz/search/filterIntra.xhtml
@@ -61,13 +61,13 @@
 						<a:ajax event="change" render="resultat,resultListIntra,totalPanelIntra,tool"
 						listener="#{intraManager.recherche()}" />
 						<f:selectItem itemValue="" itemLabel="N/C"/>
-						<f:selectItem itemValue="#{ST_PROSPECT_RECHERCHE}" />
-						<f:selectItem itemValue="#{ST_PROSPECT_AUDIT}" />
-						<f:selectItem itemValue="#{ST_PROSPECT_COMMERCIAL}" />
-						<f:selectItem itemValue="#{ST_PROSPECT_RECHERCHE_MODIFIE}" />
-						<f:selectItem itemValue="#{ST_PROSPECT_LOGISTIQUE}" />
-						<f:selectItem itemValue="#{ST_PROSPECT_ANNULE}" />
-						<f:selectItem itemValue="#{ST_PROSPECT_OK}" />
+						<f:selectItem itemValue="#{ST_INTRA_RECHERCHE}" itemLabel="#{messages[ST_INTRA_RECHERCHE]}"/>
+						<f:selectItem itemValue="#{ST_INTRA_AUDIT}" itemLabel="#{messages[ST_INTRA_AUDIT]}"/>
+						<f:selectItem itemValue="#{ST_INTRA_COMMERCIAL}" itemLabel="#{messages[ST_INTRA_COMMERCIAL]}"/>
+						<f:selectItem itemValue="#{ST_INTRA_RECHERCHE_MODIFIE}" itemLabel="#{messages[ST_INTRA_RECHERCHE_MODIFIE]}"/>
+						<f:selectItem itemValue="#{ST_INTRA_LOGISTIQUE}" itemLabel="#{messages[ST_INTRA_LOGISTIQUE]}"/>
+						<f:selectItem itemValue="#{ST_INTRA_ANNULE}" itemLabel="#{messages[ST_INTRA_ANNULE]}"/>
+						<f:selectItem itemValue="#{ST_INTRA_OK}" itemLabel="#{messages[ST_INTRA_OK]}"/>
 					</h:selectOneMenu> 
 				</a:outputPanel>
 				
