--- a/WebContent/mz/search/searchIntra.xhtml
+++ b/WebContent/mz/search/searchIntra.xhtml
@@ -120,7 +120,7 @@
 					<f:facet name="header">
 						<h:outputText value="#{messages['intra.statut']}"/>
 					</f:facet>
-						<center><b><h:outputText value="#{intra.statutIntra}" style="font-size:14px"/></b></center>
+						<center><b><h:outputText value="#{messages[intra.statutIntra]}" style="font-size:14px"/></b></center>
 					<f:facet name="footer">
 						<h:outputText value="#{messages['intra.statut']}"/>
 					</f:facet>
