--- a/WebContent/mz/search/searchProspects.xhtml
+++ b/WebContent/mz/search/searchProspects.xhtml
@@ -338,7 +338,7 @@
 							</rich:tooltip>
 						</h:graphicImage>
 						<br /> <b><h:outputText
-								value="N° Intra : #{_pDto.prospect.informationIntra.idInforamtionIntra} - #{_pDto.prospect.informationIntra.statutIntra}"
+								value="N° Intra : #{_pDto.prospect.informationIntra.idInforamtionIntra} - #{messages[_pDto.prospect.informationIntra.statutIntra]}"
 								rendered="#{!empty _pDto.prospect.informationIntra}" /></b>
 					</center>
 					<f:facet name="footer">
