--- a/WebContent/mz/searchIntra_xls.xhtml
+++ b/WebContent/mz/searchIntra_xls.xhtml
@@ -20,7 +20,7 @@
 			</ui:include>
 			<ui:include src="common/excel-column.xhtml">
 				<ui:param name="header" value="#{messages['intra.statut']}"/>
-				<ui:param name="value" value="#{intra.statutIntra}"/>
+				<ui:param name="value" value="#{messages[intra.statutIntra]}"/>
 				<ui:param name="type" value="text"/>
 			</ui:include>
 			<ui:include src="common/excel-column.xhtml">
