--- a/WebContent/mz/prospect/panels/_editIntra.xhtml
+++ b/WebContent/mz/prospect/panels/_editIntra.xhtml
@@ -10,7 +10,7 @@
 	xmlns:p="http://java.sun.com/jsf/html">
 
 	<a:outputPanel
-		rendered="#{'Administrateur en recherche d’intervenant'.equals(editProspectManager.prospect.informationIntra.statutIntra)}">
+		rendered="#{ST_INTRA_RECHERCHE.equals(editProspectManager.prospect.informationIntra.statutIntra)}">
 		<s:decorate template="../../layout/display.xhtml" style="width:800px;">
 			<ui:define name="label">
 				<h:outputText value="#{messages['intra.info']}" />
@@ -20,7 +20,7 @@
 		</s:decorate>
 	</a:outputPanel>
 	<a:outputPanel id="statutIntra"
-		rendered="#{!'Administrateur en recherche d’intervenant'.equals(editProspectManager.prospect.informationIntra.statutIntra)}">
+		rendered="#{!ST_INTRA_RECHERCHE.equals(editProspectManager.prospect.informationIntra.statutIntra)}">
 		<table>
 			<tr>
 				<td><s:decorate template="../../layout/display.xhtml"
@@ -32,13 +32,13 @@
 							value="#{editProspectManager.prospect.informationIntra.statutIntra}"
 							style="width:110px; height:20px;">
 							<a:ajax event="change" render="statutIntra" />
-							<f:selectItem itemValue="#{ST_PROSPECT_RECHERCHE}" />
-							<f:selectItem itemValue="#{ST_PROSPECT_AUDIT}" />
-							<f:selectItem itemValue="#{ST_PROSPECT_COMMERCIAL}" />
-							<f:selectItem itemValue="#{ST_PROSPECT_RECHERCHE_MODIFIE}" />
-							<f:selectItem itemValue="#{ST_PROSPECT_LOGISTIQUE}" />
-							<f:selectItem itemValue="#{ST_PROSPECT_ANNULE}" />
-							<f:selectItem itemValue="#{ST_PROSPECT_OK}" />
+							<f:selectItem itemValue="#{ST_INTRA_RECHERCHE}" itemLabel="#{messages[ST_INTRA_RECHERCHE]}"/>
+							<f:selectItem itemValue="#{ST_INTRA_AUDIT}" itemLabel="#{messages[ST_INTRA_AUDIT]}"/>
+							<f:selectItem itemValue="#{ST_INTRA_COMMERCIAL}" itemLabel="#{messages[ST_INTRA_COMMERCIAL]}"/>
+							<f:selectItem itemValue="#{ST_INTRA_RECHERCHE_MODIFIE}" itemLabel="#{messages[ST_INTRA_RECHERCHE_MODIFIE]}"/>
+							<f:selectItem itemValue="#{ST_INTRA_LOGISTIQUE}" itemLabel="#{messages[ST_INTRA_LOGISTIQUE]}"/>
+							<f:selectItem itemValue="#{ST_INTRA_ANNULE}" itemLabel="#{messages[ST_INTRA_ANNULE]}"/>
+							<f:selectItem itemValue="#{ST_INTRA_OK}" itemLabel="#{messages[ST_INTRA_OK]}"/>
 						</h:selectOneMenu>
 					</s:decorate></td>
 				<td><s:decorate template="../../layout/display.xhtml"
@@ -143,7 +143,7 @@
 			</table>
 		</rich:collapsiblePanel>
 		<a:outputPanel id="formForLogistique"
-			rendered="#{('Logistique').equals(editProspectManager.prospect.informationIntra.statutIntra)}">
+			rendered="#{ST_INTRA_LOGISTIQUE.equals(editProspectManager.prospect.informationIntra.statutIntra)}">
 			<rich:collapsiblePanel header="Informations à remplir : "
 				expanded="true" switchType="client">
 				<table border="0" cellspacing="3">
@@ -278,7 +278,7 @@
 			</rich:collapsiblePanel>
 		</a:outputPanel>
 		<a:outputPanel id="formForAnnule"
-			rendered="#{('Annulé').equals(editProspectManager.prospect.informationIntra.statutIntra)}">
+			rendered="#{ST_INTRA_ANNULE.equals(editProspectManager.prospect.informationIntra.statutIntra)}">
 			<rich:collapsiblePanel header="Informations à remplir : "
 				expanded="true" switchType="client">
 				<s:decorate template="../../layout/display.xhtml"
@@ -299,7 +299,7 @@
 			</rich:collapsiblePanel>
 		</a:outputPanel>
 		<a:outputPanel id="formForModif"
-			rendered="#{'Attente AD'.equals(editProspectManager.prospect.informationIntra.statutIntra)}">
+			rendered="#{ST_INTRA_RECHERCHE_MODIFIE.equals(editProspectManager.prospect.informationIntra.statutIntra)}">
 			<rich:panel header="Informations formation : ">
 				<rich:panel id="referencePanelModif">
 					<s:decorate template="../../layout/display.xhtml">
