Ticket #31, Raison perte plus obligatoire

--- a/WebContent/mz/search/searchProspects.xhtml
+++ b/WebContent/mz/search/searchProspects.xhtml
@@ -103,6 +103,7 @@
 		</a:outputPanel>-->
 
 		<h:form id="resultat">
+				<h:messages showDetail="true" />
 			<!-- tableau de resultat -->
 			<rich:dataTable id="resultList" value="#{searchProspect.results}"
 				var="_pDto" style="width:100%; overflow-x:auto; overflow-y:auto;">
