--- a/WebContent/mz/prospect/panels/_editIntra.xhtml
+++ b/WebContent/mz/prospect/panels/_editIntra.xhtml
@@ -28,7 +28,7 @@
 						<ui:define name="label">
 							<h:outputText value="#{messages['intra.statut']}" />
 						</ui:define>
-						<h:selectOneMenu
+						<h:selectOneMenu id="i_statut_select" label="Statut Select"
 							value="#{editProspectManager.prospect.informationIntra.statutIntra}"
 							style="width:110px; height:20px;">
 							<a:ajax event="change" render="statutIntra" />
@@ -290,8 +290,6 @@
 						<h:inputTextarea id="annulation"
 							value="#{editProspectManager.prospect.prospectDetail.raisonPerte}"
 							cols="60" rows="2">
-							<f:validateRequired />
-							<rich:validator />
 						</h:inputTextarea>
 					</center>
 				</s:decorate>
