Ticket 31, Raison perte optionnel

--- a/WebContent/mz/prospect/panels/_editIntra.xhtml
+++ b/WebContent/mz/prospect/panels/_editIntra.xhtml
@@ -285,7 +285,7 @@
 					style="width:700px;">
 					<center>
 						<ui:define name="label">
-							<h:outputText value="#{messages['prospect.raisonPerte']}*" />
+							<h:outputText value="#{messages['prospect.raisonPerte']}" />
 						</ui:define>
 						<h:inputTextarea id="annulation"
 							value="#{editProspectManager.prospect.prospectDetail.raisonPerte}"
