--- a/WebContent/mz/search/searchProspects.xhtml
+++ b/WebContent/mz/search/searchProspects.xhtml
@@ -91,7 +91,7 @@
 
 		<!-- Pop up de modification et supression de prospect -->
 		<ui:include src="../prospect/popupProspect.xhtml" />
-		<!-- Recherche prospect -->
+		<!-- Tableau de répartition -->
 		<a:outputPanel id="tableauRepartition">
 			<ui:include src="tableauRepartition.xhtml" />		
 		</a:outputPanel>
@@ -391,9 +391,6 @@
 				rendered="#{!empty searchProspect.results}" value="Export Excel"
 				style="width:110px;height:20px;" />
 			<br />
-			<a:commandButton value="#{messages['dispatch.title']}"
-				style="width:110px;height:20px;"
-				rendered="#{sessionDataManager.managerDispatcher}" action="#{searchProspect.setShowTableau(true)}" render="tableauRepartition"/>
 		</h:form>
 		</center>
 	</ui:define>
