--- a/WebContent/mz/prospect/panels/_visuStatutProspect.xhtml
+++ b/WebContent/mz/prospect/panels/_visuStatutProspect.xhtml
@@ -73,7 +73,7 @@
 							<h:outputText value="#{messages['prospect.potentiel']}" />
 						</ui:define>
 						<h:outputText
-							value="#{editProspectManager.prospect.prospectDetail.potentielAsString}" />
+							value="#{editProspectManager.potentielAsString}" />
 					</s:decorate>
 					<s:decorate template="../../layout/display.xhtml"
 						rendered="#{editProspectManager.prospect.prospectDetail.asuivre}">
